fix : mobile layout shift

--- a/full-track-projects/javascript-object/react-version/src/App.css
+++ b/full-track-projects/javascript-object/react-version/src/App.css
@@ -225,12 +225,12 @@ form input {
 
 @media screen and (max-width:715px) {
   #card-container {
-    width: 98vw;
+    width: 96vw;
   }
 }
 @media screen and (max-width:563px) {
   body {
-    max-width: 98vw;
+    max-width: 96vw;
   }
   .header-section {
     flex-direction: column;
@@ -250,10 +250,10 @@ form input {
 }
 @media screen and (max-width:420px) {
   .search-bar {
-    width: 98vw;
+    width: 96vw;
   }
   .user-header {
-    width: 98vw;
+    width: 96vw;
     justify-content: space-between;
   }
 }
